Added Lua extensions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ctrlc = "3.2.2"
 enable-ansi-support = "0.1.2"
+hlua = "0.4.1"
 psutil = "3.2.2"
 whoami = "1.2.1"
 
