--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.24.0"
 enable-ansi-support = "0.1.2"
-hlua = "0.4.1"
 psutil = "3.2.2"
+rlua = "0.19.4"
 whoami = "1.2.1"
 
 [target.'cfg(windows)'.build-dependencies]
