--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clone-into-box = "0.1.0"
 crossterm = "0.24.0"
 enable-ansi-support = "0.1.2"
 psutil = "3.2.2"
