--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "flash-shell"
 version = "0.1.0"
 edition = "2021"
+rustflags = ["-C", "target-feature=+crt-static"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
